--- a/src/components/Cards/style.module.css
+++ b/src/components/Cards/style.module.css
@@ -2,18 +2,14 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 1rem;
-
-
 }
 
 .card {
     width: 18rem;
-    margin: 1rem;
     border: 1px solid #ccc;
     border-radius: 5px;
-    padding: 1rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    margin-bottom: 25px;
     
 }
 
@@ -25,17 +21,18 @@
     width: 100%;
     height: 200px;
     object-fit: cover;
-    border-radius: 5px;
+    border-radius: 5px 5px 0 0;
 }
 
 .card h2 {
-    font-size: 1.5rem;
-    margin: .5rem 0;
+    font-size: 1rem;
+    margin: .5rem ;
 }
 .card h6 {
-    font-size: 1rem;
+    font-size: 0.8rem;
     margin: .5rem 0;
     padding: .5rem;
+    color: #5a5858;
 }
 
 .card p {
@@ -48,7 +45,7 @@
     width: 100%;
     padding: 0.5rem 1rem;
     border: none;
-    background-color: #f1356d;
+    background-color: #f80606;
     color: #fff;
     font-size: 1.2rem;
     border-radius: 5px;
@@ -58,15 +55,13 @@
 }
 
 .card a:hover {
-    background-color: #f1356d;
+    background-color: #f80606;
     opacity: 0.8;
 }
 
 .tags {
     display: flex;
-    flex-wrap: wrap;
-    padding: 0.3rem;
-
+    flex-wrap: wrap;    
 }
 .content {
     display: flex;
