--- a/src/pages/eventos/style.module.css
+++ b/src/pages/eventos/style.module.css
@@ -2,10 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #f0f0f0;
     padding: 20px;
-    border: 1px solid #ccc;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    margin: 150px;
 }
 
 .text Label {
