Incrementing axios and some search functions

--- a/src/components/AppBar/style.module.css
+++ b/src/components/AppBar/style.module.css
@@ -7,7 +7,7 @@
     height: 80px;
     background-color: #040224;
     box-shadow: 0 0 5px rgba(10, 10, 10, 0.3);
-    color: #fff;
+    color: #fff;    ;
 
 }
 
