--- a/src/components/Filtro/style.module.css
+++ b/src/components/Filtro/style.module.css
@@ -77,7 +77,7 @@
     border: none;
     color: #fff;
     font-weight: 700;
-    background-color: #040224;
+    background-color: #027cf7;
     cursor: pointer;
     text-decoration: none;
 }
